# inter-port-communication

./: .gitignore  CMakeLists.txt  README.md  logcontroller.cpp  logcontroller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  portcontroller.cpp  portcontroller.h
